Update signum transformer

--- a/scripts/signum_transformer.ipynb
+++ b/scripts/signum_transformer.ipynb
@@ -1,6 +1,19 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Transformer architecture on SIGNUM Dataset"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import os\n",
@@ -25,6 +38,19 @@
       "metadata": {
         "gather": {
           "logged": 1741369741952
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This shows the transformer classifier model which accepts a time series data as input"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     },
@@ -77,6 +103,19 @@
       "metadata": {
         "gather": {
           "logged": 1741369742091
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Code for the training of the transformer followed by validation steps. It also plots the loss and accuracy curves for training and validation"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     },
@@ -222,6 +261,19 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "From the signum data we extract data for both hands only and leave out the pose since most of sign language data lies in the hands. This cell first extract data from the numpy files and then extracts data for both hands. Tha shape of training, validation and testing set is printed"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def extract_both_hand(sequence_data):\n",
@@ -260,7 +312,7 @@
         "    test_loader = get_dataloader(data_path, 'test', batch_size)\n",
         "    return train_loader, val_loader, test_loader\n",
         "\n",
-        "folder_path = './data/data_numpy' \n",
+        "folder_path = '../data/Signum_numpy' \n",
         "train_loader, val_loader, test_loader = get_all_dataloaders(folder_path, batch_size=16)"
       ],
       "outputs": [
@@ -351,9 +403,21 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Generate classification report and confusion matrix"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Generate classification report and confusion matrix\n",
         "import time\n",
         "\n",
         "model.eval()\n",
