Update distilation and transformer code

--- a/scripts/signum_distillation.ipynb
+++ b/scripts/signum_distillation.ipynb
@@ -1,6 +1,19 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Knowledge Distillation on Signum Dataset"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import os\n",
@@ -27,6 +40,19 @@
       "metadata": {
         "gather": {
           "logged": 1741458064250
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dataloader for Signum Dataset"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     },
@@ -60,6 +86,20 @@
       "metadata": {
         "gather": {
           "logged": 1741458064385
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Extract data of both hands and remove pose data\n",
+        "## Load data for distillation and the procrustes distance matrix"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     },
@@ -197,6 +237,19 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Transformer Classifier"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class TransformerClassifier(nn.Module):\n",
@@ -245,6 +298,19 @@
       "metadata": {
         "gather": {
           "logged": 1741458065124
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training the distillation model"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     },
@@ -623,6 +689,19 @@
       "metadata": {
         "gather": {
           "logged": 1741468592701
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Classification Metrics"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     },
