--- a/scripts/skeleton_distillation.ipynb
+++ b/scripts/skeleton_distillation.ipynb
@@ -1,6 +1,19 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Knowledge Distillation on Skeleton Dataset"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import os\n",
@@ -62,6 +75,19 @@
       "metadata": {
         "gather": {
           "logged": 1741300162951
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dataloader for distillation includes X, y and the procrustes distance matrix"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     },
@@ -239,6 +265,19 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Transformer architecture"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -305,6 +344,19 @@
       "metadata": {
         "gather": {
           "logged": 1741300163407
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Knowledge distillation training model"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     },
@@ -502,6 +554,19 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Dataset shape"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Load the pre-computed DTW distances\n",
@@ -637,6 +702,19 @@
       "metadata": {
         "gather": {
           "logged": 1741303178509
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Calculate metrics on test data"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     },
