--- a/scripts/skeleton_transformer.ipynb
+++ b/scripts/skeleton_transformer.ipynb
@@ -1,6 +1,19 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Transformer Classifier with Skeleton Dataset"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import os\n",
@@ -25,6 +38,19 @@
       "metadata": {
         "gather": {
           "logged": 1741455990574
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dataloader from numpy files"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     },
@@ -151,6 +177,19 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Modified transformer architecture for better performance on this dataset"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -217,6 +256,19 @@
       "metadata": {
         "gather": {
           "logged": 1741456014180
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training model"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     },
@@ -320,6 +372,19 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Test results"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "model.eval()\n",
@@ -348,6 +413,19 @@
       "metadata": {
         "gather": {
           "logged": 1741456857991
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Print metrics"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     },
